@@ -9,9 +9,9 @@
 	<status>RC1</status>
 	<status>Beta</status>
 	
-	<build>Build 4385</build>
+	<build>Build 4390</build>
 	<name>toendaCMS</name>
 	<tagline>Your ideas ahead</tagline>
-	<release_date>04.02.2008 - 11:20</release_date>
+	<release_date>04.02.2008 - 12:13</release_date>
 	<toenda_copyright>2003 - 2008</toenda_copyright>
 </version>
