@@ -88,7 +88,7 @@ body {
 	padding: 1px;
 }
 
-.mainTexth1, h1 {
+.mainText h1, h1 {
 	text-decoration: none;
 	color: #444 !important;
 }
@@ -176,7 +176,7 @@ h1, h1 a, h1 a:visited, .description { text-decoration: none; color: white; }
 h1 a:hover { text-decoration: none !important; }
 h2, h2 a, h2 a:visited, h3, h3 a, h3 a:visited, h4, h4 a, h4 a:visited { color: #444 !important; }
 
-h2, h2 a, h2 a:hover, h2 a:visited, h3, h3 a, h3 a:hover, h3 a:visited, h4, h4 a, h4 a:hover, h4 a:visited, .sidebar h2, #wp-calendar caption, cite {
+h2, h2 a, h2 a:hover, h2 a:visited, h3, h3 a, h3 a:hover, h3 a:visited, h4, h4 a, h4 a:hover, h4 a:visited, .sidebar h2, cite {
 	text-decoration: none;
 }
 
